--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>My Resume</h1>
 <hr>
     <p>Click on the picture to know about me</p>
-    <a href="/about.html"><img src="/Profile.jpeg" height="350"></a>
+    <a href="about.html">About<img src="/Profile.jpeg" height="350"></a>
 <br>
 <hr>
     <h2>Education</h2>
@@ -70,6 +70,6 @@
        </li>                  
      </ol>
 <hr>
-<a href="/Projects.html"><h2>Click here to view my projects</h2></a>     
+<a href="Projects.html"><h2>Click here to view my projects</h2></a>     
 </body>
 </html>
