--- a/Projects.html
+++ b/Projects.html
@@ -13,14 +13,14 @@
          Birthday Invite   
         </li></h2>
         <ul>
-            <a href="/birthday-invite.html"><li>Click here!</li></a>
+            <a href="birthday-invite.html"><li>Click here!</li></a>
         </ul>
  <hr>
        <h2>
         <li>Movie Ranking</li>
        </h2> 
        <ul>
-            <a href="/movie-ranking.html"><li>Click here!</li></a>
+            <a href="movie-ranking.html"><li>Click here!</li></a>
        </ul>
     </ol>    
 </body>
