--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Summary</h2>
-    <img src="/Profile.jpeg" height="350">
+    <img src="Profile.png" height="350">
     <ul>
         <li>Name - Shadaan Khan</li>
         <li>D.O.B - 6/2/1999</li>
