--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>My Resume</h1>
 <hr>
     <p>Click on the picture to know about me</p>
-    <a href="about.html">About<img src="Profile.png" height="350"></a>
+    <a href="about.html"><img src="Profile.png" height="350"></a>
 <br>
 <hr>
     <h2>Education</h2>
